[package]
name = "turso_dotnet_build"
version = "0.1.0"
edition = "2024"


[dependencies]
turso_dotnet = { path = "../libTurso-native" }

[build-dependencies]
interoptopus = { path = "../../dependency/interoptopus/crates/core" }
interoptopus_backend_csharp = { path = "../../dependency/interoptopus/crates/backend_csharp" }
turso_dotnet = { path = "../libTurso-native" }